New notebook layout

--- a/notebooks/03-error-based-analysis.ipynb
+++ b/notebooks/03-error-based-analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Error Based Analysis (Example)"
+    "# Simple predictor"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "2023-12-24 by @jpgil\n",
     "\n",
-    "This notebook is an example with a real use case for the dataset. It implements a feature extraction in the logtext column (the error code, or errcode) and do a simple assumption to explain and predict execution failures. The method is quite simple yet powerful, and can be extended by implementing TF-IDF analysis. "
+    "This notebook is an example with a real use case for the dataset. It implements a feature extraction in the logtext column (the error code, or *errcode*) and do a simple assumption to explain and predict execution failures. The method is quite simple yet powerful, and can be extended by implementing TF-IDF analysis. "
    ]
   },
   {
