--- a/notebooks/01-basic-usage.ipynb
+++ b/notebooks/01-basic-usage.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,22 +108,22 @@
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-meta.parket'\n",
     "if not os.path.exists(fname):\n",
-    "    urlretrieve(f'{base_url}/{fname}', f'{PATH}/{fname}')\n",
+    "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_meta=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-meta.parket')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces.parket'\n",
     "if not os.path.exists(fname):\n",
-    "    urlretrieve(f'{base_url}/{fname}', f'{PATH}/{fname}')\n",
+    "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_inst=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces.parket')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-SUBSYSTEMS.parket'\n",
     "if not os.path.exists(fname):\n",
-    "    urlretrieve(f'{base_url}/{fname}', f'{PATH}/{fname}')\n",
+    "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_subs=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces-SUBSYSTEMS.parket')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-TELESCOPES.parket'\n",
     "if not os.path.exists(fname):\n",
-    "    urlretrieve(f'{base_url}/{fname}', f'{PATH}/{fname}')\n",
+    "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_tele=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces-TELESCOPES.parket')"
    ]
   },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "[220 rows x 10 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
        "std         NaN      NaN              NaN    NaN     NaN   564.355139  NaN  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "[192845 rows x 14 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "std                             NaN      64.190912  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
