--- a/notebooks/01-basic-usage.ipynb
+++ b/notebooks/01-basic-usage.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# For Colab only\n",
-    "if 'google.colan' in sys.modules:\n",
+    "if 'google.colab' in sys.modules:\n",
     "    from google.colab import output\n",
     "    output.clear()\n"
    ]
