--- a/notebooks/01-basic-usage.ipynb
+++ b/notebooks/01-basic-usage.ipynb
@@ -97,22 +97,22 @@
     "fname = f'{INSTRUMENT}-{RANGE}-meta.parket'\n",
     "if not os.path.exists(fname):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
-    "df_meta=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-meta.parket')\n",
+    "df_meta=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces.parket'\n",
     "if not os.path.exists(fname):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
-    "df_inst=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces.parket')\n",
+    "df_inst=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-SUBSYSTEMS.parket'\n",
     "if not os.path.exists(fname):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
-    "df_subs=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces-SUBSYSTEMS.parket')\n",
+    "df_subs=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-TELESCOPES.parket'\n",
     "if not os.path.exists(fname):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
-    "df_tele=pd.read_parquet(f'{PATH}/{INSTRUMENT}-{RANGE}-traces-TELESCOPES.parket')"
+    "df_tele=pd.read_parquet(f'{PATH}/{fname}')"
    ]
   },
   {
