--- a/notebooks/02-common-splits.ipynb
+++ b/notebooks/02-common-splits.ipynb
@@ -68,22 +68,22 @@
     "# Comment what you actually need\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-meta.parket'\n",
-    "if not os.path.exists(fname):\n",
+    "if not os.path.exists(f'{PATH}/{fname}'):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_meta=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces.parket'\n",
-    "if not os.path.exists(fname):\n",
+    "if not os.path.exists(f'{PATH}/{fname}'):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_inst=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-SUBSYSTEMS.parket'\n",
-    "if not os.path.exists(fname):\n",
+    "if not os.path.exists(f'{PATH}/{fname}'):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_subs=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "fname = f'{INSTRUMENT}-{RANGE}-traces-TELESCOPES.parket'\n",
-    "if not os.path.exists(fname):\n",
+    "if not os.path.exists(f'{PATH}/{fname}'):\n",
     "    urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "df_tele=pd.read_parquet(f'{PATH}/{fname}')"
    ]
@@ -643,13 +643,13 @@
     "\n",
     "    # Metadata per instrument\n",
     "    fname = f'{inst}-{RANGE}-meta.parket'\n",
-    "    if not os.path.exists(fname):\n",
+    "    if not os.path.exists(f'{PATH}/{fname}'):\n",
     "        urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "    df_meta_by_subsys[inst]=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
     "    # Traces for all subsystems\n",
     "    fname = f'{inst}-{RANGE}-traces-SUBSYSTEMS.parket'\n",
-    "    if not os.path.exists(fname):\n",
+    "    if not os.path.exists(f'{PATH}/{fname}'):\n",
     "        urlretrieve(f'{REPO_URL}/{fname}', f'{PATH}/{fname}')\n",
     "    df=pd.read_parquet(f'{PATH}/{fname}')\n",
     "\n",
