--- a/notebooks/02-common-splits.ipynb
+++ b/notebooks/02-common-splits.ipynb
@@ -511,7 +511,7 @@
    "source": [
     "## Group by Templates\n",
     "\n",
-    "A Template in the context of VLT executions corresponds to a script file run in \"BOB\", the Broker of Observations, that receive an array of parameters and executes high level tasks by calling the API of lower level processes. The exact behavior of a template may very with the parameters, for example using filter RED could lead to different path in the code than filter B, but in general the execution of a single template is rather deterministic. Therefore it makes sense to characterize the behavior of every templates to find deviations from the expected path(s) of execution(s)."
+    "A Template in the context of VLT executions corresponds to a script file run in \"BOB\", the Broker of Observations, that receive an array of parameters and executes high level tasks by calling the API of lower level processes. The exact behavior of a template may vary with the parameters, for example in some instruments using filter RED  lead to different path in the code than use the filter BLUE, but in general the execution of a single template is rather deterministic. Therefore it makes sense to characterize the behavior of each templates to find deviations from the expected path(s) of execution(s)."
    ]
   },
   {
