--- a/notebooks/04-naive-bayes.ipynb
+++ b/notebooks/04-naive-bayes.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "2023-12-24 by @jpgil\n",
     "\n",
-    "This notebook is available in Google Colaboratory at https://colab.research.google.com/github/paranal-sw/parlogs-observations/blob/main/notebooks/03-error-based-analysis.ipynb\n",
+    "This notebook is available in Google Colaboratory at https://colab.research.google.com/github/paranal-sw/parlogs-observations/blob/main/notebooks/04-naive-bayes\n",
     "\n",
     "Based on the previous notebook of simple error analysis, let's train Naive Bayes predictor. For a more detailed explanation of Naive Bayes please refer to https://www.datacamp.com/tutorial/naive-bayes-scikit-learn"
    ]
@@ -189,13 +189,6 @@
     "df_meta_failed['STATE']  = 'Failed'\n",
     "\n",
     "print(f'Of all executions, {len(df_meta_failed)} failed and {len(df_meta_success)} were successful')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### One Hot Encoding"
    ]
   },
   {
