--- a/notebooks/04-naive-bayes.ipynb
+++ b/notebooks/04-naive-bayes.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "2023-12-24 by @jpgil\n",
     "\n",
-    "This notebook is available in Google Colaboratory at https://colab.research.google.com/github/paranal-sw/parlogs-observations/blob/main/notebooks/04-naive-bayes\n",
+    "This notebook is available in Google Colaboratory at https://colab.research.google.com/github/paranal-sw/parlogs-observations/blob/main/notebooks/04-naive-bayes.ipynb\n",
     "\n",
     "Based on the previous notebook of simple error analysis, let's train Naive Bayes predictor. For a more detailed explanation of Naive Bayes please refer to https://www.datacamp.com/tutorial/naive-bayes-scikit-learn"
    ]
